clang/test/BSC/Negative/Trait/GenericTrait/trait_redefintion.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F<T> {// expected-note {{previous definition is here}}
  T foo(This* this); 
};

_Trait F<T> { // expected-error {{redefinition of 'F'}}
  T foo(This* this); 
};